// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Image /> renders correctly 1`] = `
<div
  className="image -expand"
>
  <span
    className="image--native"
    style={
      Object {
        "display": "inline-block",
      }
    }
  />
</div>
`;

exports[`<Image /> renders correctly with optional props 1`] = `
<div
  className="image class -small"
>
  <span
    className="image--native"
    style={
      Object {
        "display": "inline-block",
      }
    }
  />
</div>
`;
